Update remaining legacy libs (jep, com4j) and clear all deprecation warnings
- Replace 2006-era jep.jar with org.scijava:jep:2.4.2 (same org.nfunk.jep
  API, the last GPL release republished to Maven Central)
- Upgrade com4j -> 2.1; the jar now self-contains both x86/amd64 natives,
  so the redundant loose com4j-*.dll files are removed
- Eliminate all 34 deprecation/removal compiler warnings:
  * Class.newInstance() -> getDeclaredConstructor().newInstance() (4 factories)
  * InputEvent.*_MASK -> *_DOWN_MASK accelerators (EcuLoggerMenuBar)
  * new Boolean()/new Double() -> Boolean.valueOf()/Double.valueOf()
  * BigDecimal.ROUND_HALF_UP -> RoundingMode.HALF_UP

Builds clean on both Linux and Windows class paths with zero
deprecation/removal warnings.